@@ -1,6 +1,8 @@
 Revision history for Mojolicious::Plugin::ToolkitRenderer
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.09      2020-05-18 15:08:25-07:00 America/Los_Angeles
         - Update Travis YAML
